Add GET /groups/<gid>
